recompiled deploy files

--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -3243,10 +3243,12 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
 <ul>
 <li>Harfenvorschau kann unn auch PDF anzeigen #281</li>
 <li>Taktnummern, Zählmarken, Anmerkungen unterbrechen nun Flusslinen #279</li>
-<li>added experimental packer 3</li>
-<li>now support Akkordzither #289</li>
-<li>now support open tuning #289</li>
-<li>option to attach inline lyrics to countnotes #290</li>
+<li>experimenteller Packer Nr. 3</li>
+<li>Unterstützung für Akkordzither und beliebig gestimmte Instrumente#289</li>
+<li>Liedtexte an Zählnummern anfügen #290</li>
+<li>Weitere Bearbeitung von Akkorden im ABC-Code</li>
+<li>“Offene” Sprunglinien #285</li>
+<li>PDF-Tab in Harfenvorschau #281</li>
 </ul>
 <h2 id="v-1.12-august-2019"><span class="header-section-number">9.2</span> V 1.12 August 2019</h2>
 <h3 id="fehlerbehebung"><span class="header-section-number">9.2.1</span> Fehlerbehebung</h3>
