--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -2546,12 +2546,16 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
       </code></pre>
 <h2 id="extract.0.layout.instrument"><span class="header-section-number">9.60</span> <code>extract.0.layout.instrument</code> - Instrument</h2>
 <p>Hier gibst du den Namen des Instrumentes an. Die Angabe bewirkt spezifische Verarbeitungen, z.B. die Anpassung der Tonhöhe zur Saite (bei <code>saitenspiel</code> als diatonischem Instrument ist das nicht linear).</p>
-<p>Es gibt folgende Einstellunge:</p>
+<p>Es gibt folgende Einstellungen:</p>
 <ul>
 <li><strong><code>37-string-g-g</code></strong>: das ist die 37-saitige Harfe</li>
 <li><strong><code>25-string-g-g</code></strong>: das ist die 25-saitige Harfe</li>
 <li><strong><code>18-string-b-e</code></strong>: das ist die 18-saitige Harfe gestimmt von B bis e</li>
-<li><p><strong><code>saitenspiel</code></strong>: das ist ein diatonisch gestimmtes Saitenspiel mit einer G-Bass-Saite</p>
+<li><strong><code>saitenspiel</code></strong>: das ist ein diatonisch gestimmtes Saitenspiel mit einer G-Bass-Saite</li>
+<li><strong><code>Zipino</code></strong>: das ist ein diatonisch gestimmtes Saitenspiel mit einer G-Bass-Saite</li>
+<li><strong><code>okon-*</code></strong>: Tischharfe von okon-guitar.de. Dieses Instrument hat Klappen für die Anpassung der Tonart. Daher gibt es hier veschiedene varianten</li>
+<li><strong><code>Akkordzither</code></strong>: Für die Akkordzither gibt es verschiedene Varianten und Stimmungen. Bitte experimentieren Sie mit den Saitennamen.</li>
+<li><p><strong><code>klein-a4</code></strong> ein Instrument bei dem die Unterlegnonten auf ein A4-Blatt passen.</p>
 <pre><code>&quot;instrument&quot;: &quot;37-strings-g-g&quot;</code></pre></li>
 </ul>
 <h2 id="extract.0.layout.jumpline_anchor"><span class="header-section-number">9.61</span> <code>extract.0.layout.jumpline_anchor</code> - Sprungl.Anker</h2>
@@ -2986,14 +2990,14 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
         &quot;value&quot; : {
           &quot;pos&quot;   : [340, 251],
           &quot;style&quot; : &quot;small&quot;,
-          &quot;text&quot;  : &quot;© 2021\n&quot;
+          &quot;text&quot;  : &quot;© 2022\n&quot;
         }
       },
       &quot;T03_copyright_harpnotes&quot;  : {
         &quot;value&quot; : {
           &quot;pos&quot;   : [340, 260],
           &quot;style&quot; : &quot;small&quot;,
-          &quot;text&quot;  : &quot;© 2021 Notenbild: zupfnoter.de&quot;
+          &quot;text&quot;  : &quot;© 2022 Notenbild: zupfnoter.de&quot;
         }
       },
       &quot;T04_to_order&quot;             : {
@@ -3059,7 +3063,7 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
 <h2 id="presets.notes.T02_copyright_music"><span class="header-section-number">9.121</span> <code>presets.notes.T02_copyright_music</code> - T02 Copyright Musik</h2>
 <p>Dies fügt einen Copyrightvermerk für die Musik ein. Hier wird das Copyright auf die Komposition angegeben.</p>
 <pre><code>    &quot;T02_copyright_music&quot;: {
-      &quot;value&quot; : {&quot;pos&quot;: [340, 251], &quot;style&quot;: &quot;small&quot;, &quot;text&quot;: &quot;© 2021\n&quot;}
+      &quot;value&quot; : {&quot;pos&quot;: [340, 251], &quot;style&quot;: &quot;small&quot;, &quot;text&quot;: &quot;© 2022\n&quot;}
     }
       </code></pre>
 <h2 id="presets.notes.T03_copyright_harpnotes"><span class="header-section-number">9.122</span> <code>presets.notes.T03_copyright_harpnotes</code> - T03 Copyright Unterlegnoten</h2>
@@ -3068,7 +3072,7 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
       &quot;value&quot; : {
         &quot;pos&quot;   : [340, 260],
         &quot;style&quot; : &quot;small&quot;,
-        &quot;text&quot;  : &quot;© 2021 Notenbild: zupfnoter.de&quot;
+        &quot;text&quot;  : &quot;© 2022 Notenbild: zupfnoter.de&quot;
       }
     }
       </code></pre>
